Fixing overflow problem caused by article teasers

--- a/sites/all/themes/eshell/styles/scss/features/_teasers.scss
+++ b/sites/all/themes/eshell/styles/scss/features/_teasers.scss
@@ -34,6 +34,10 @@
 }
 
 // Article teasers
+.article-teaser{
+  float: left;
+  width: 100%;  
+}
 .article-container{
   float: left;
   width: 100%;
